Bug 293200 - Drag&drop files in dolphin doesnt preserve origin
Summary: Drag&drop files in dolphin doesnt preserve origin
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: folders (other bugs)
Version First Reported In: 2.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-03 11:52 UTC by
Modified: 2012-09-19 17:01 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description 2012-02-03 11:52:05 UTC
Version:           Git (using Devel) 
OS:                Linux

When selecting and dragging a file to another folder, when you put the mouse over the new folder, then in right panel shows the files from the folder where you have the mouse over when it should contonue showing the files from where the file was first picked and dragged.

Reproducible: Always

Steps to Reproduce:
Select a file (right panel) and move it to the new folder where you want to move it, when the mouse is over the new folder (left panel) it then shows the files that are in that folder in the right panel.

Actual Results:  
Already described

Expected Results:  
Dolphin should not show the fiels that are in the folder to which the files are being dragged. 
Should continue showing the files from where the file was selected like it used to happen before dolphin 2.0.

OS: Linux (x86_64) release 3.2.2-1.1-desktop
Compiler: gcc
Comment 1 Peter Penz 2012-02-03 21:12:40 UTC
Please disable the checkbox "[ ] Open folders during drag operations" in the settings dialog (Navigation), then the folder won't get opened. I'm not 100 % sure whether I understood your report correctly - please reopen it in case if I missunderstood something (... and probably provide a screenshot). Thanks.
Comment 2 2012-02-04 00:28:28 UTC
That option "Open folders during drag operations" was not activated/selected.

You have for example the folder ~/Documents where you have severall files, and you want to move a file to the folder ~/Images, so in dolphin you have in right panel all files from the folder ~/Documents and you select a file foo.txt and drag it into the folder ~/Images, when you put the mouse over the folder ~/Images (folders panel) happens that the contents from the folder ~/Images appear in the right panel.
But that should not happen, it should continue to show the contents of the  folder ~/Documents (from you selected and dragged the file foo.txt).

Is not possible to create screenshots of tis situations, a video could be the solution but since its a bug file it can be attached here.
Thats why i mailed you asking you to chat in freenode in where was possible to send you a video.
But i think now with this description you will be able to understand the problem.
Comment 3 Peter Penz 2012-02-04 08:18:47 UTC
I could reproduce the issue now but only because I knew of your other bug reports that you have activated the "Folders Panel": Please try to use the terms that are in the menus of Dolphin to explain a bug. "right panel" and "left panel" are not sufficient as description as the position of panels can be configured by the users. If in doubt please just attach a screenshot.

Example of a sufficient bug description:

Precondition:
- Folders Panel is enabled
- View mode is set to "icons"
- Have a directory ~/Documents with some files
- Have a directory ~/Images with sub-directories

Steps to reproduce:
- In the view open a directory ~/Documents
- Drag the file ~/Documents/x from the view to ~/Images in the Folders Panel
  and don't release the mouse button (= don't drop)
  Result: The folder ~/Images gets expanded in the Folders Panel
- Move the mouse above the sub-folder x of ~/Images and don't release the mouse button

Actual result:
- The view content will show ~/Images/x

Expected result:
- The view content won't change

I'd kindly ask in future to just use this pattern (Precondition, Steps to reproduce, Actual result, Expected result) for bug-reports. Thanks.
Comment 4 Peter Penz 2012-02-04 08:22:47 UTC
PS: Regarding the video: It is not necessary anymore but for future issues please just upload them to e.g. YouTube. It takes only a few minutes to create an account. Thanks.
Comment 5 gedgon 2012-05-09 14:19:38 UTC
Hi Peter, I'm little confused by Zé's bug description. Is this the same issue what is shown on video?
http://youtu.be/VXRtphAxJX8
Comment 6 Peter Penz 2012-05-09 15:19:29 UTC
@Gedgon: Yes, it is the same issue as shown in the video :-)
Comment 7 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:20:05 UTC
Resetting assignee to default as per bug #305719
Comment 8 Emmanuel Pescosta 2012-09-08 18:50:18 UTC
review-request: https://git.reviewboard.kde.org/r/106381/

@Zé: Can you please test it? :)
Comment 9 2012-09-14 04:25:35 UTC
Currently i have no machine with kde compiled from sources and i have very litle time to do a new kde build for some time, so i would kindly ask if other could test your changes.
Comment 10 Emmanuel Pescosta 2012-09-19 17:01:40 UTC
Git commit f52fc1425263c2e9ca0f905e9c3d1264e4a41aae by Emmanuel Pescosta.
Committed on 19/09/2012 at 19:00.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fixes Bug 293200 - Drag&drop files in dolphin doesnt preserve origin

Patch 106381 Comment #3:
When "Open folders during drag operations" is enabled, two things happen, both in the DolphinView and in the Folders Panel:

1) When hovering a folder that can be expanded (this is the case for folders with sub-folders in the Folders Panel and in the DolphinView if in Details View mode), toggle its "expanded" state.
2) When hovering a folder that can not be expanded (i.e., a folder without sub-folders or any folder in Icons or Compact View), open this folder in the DolphinView via the KItemListController's itemActivated(int) signal.

The bug described in bug 293200 comment 3 is that 1) is always wanted, but 2) is not wanted for the Folders Panel.
FIXED-IN: 4.9.2

M  +12   -1    dolphin/src/kitemviews/kitemlistcontroller.cpp
M  +10   -0    dolphin/src/kitemviews/kitemlistcontroller.h
M  +1    -0    dolphin/src/panels/folders/folderspanel.cpp

http://commits.kde.org/kde-baseapps/f52fc1425263c2e9ca0f905e9c3d1264e4a41aae