src/panels/folders/folderspanel.cpp
@@ -140,6 +140,7 @@ void FoldersPanel::showEvent(QShowEvent* event)
 
         m_controller = new KItemListController(m_model, view, this);
         m_controller->setSelectionBehavior(KItemListController::SingleSelection);
+        m_controller->setAutoActivationBehavior(KItemListController::ExpansionOnly);
         m_controller->setAutoActivationDelay(750);
         m_controller->setSingleClickActivation(true);
 
